--- a/index.html
+++ b/index.html
@@ -615,7 +615,11 @@
     menuSkeleton(); 
     await loadMenu();
     await loadComplements();
-    if(user) { applyUser(); fetchOrders(); }
+    if(user) { 
+      applyUser(); 
+      await fetchOrders({showSkeleton:true});
+      startOrdersAutoRefresh(10000);   // <-- auto-refresh a cada 10s
+    }
     renderCart();
     updateAuthUI();
     setupNotifications();
@@ -624,6 +628,13 @@
     addrRenderList();
     await bootFeesHours();           // define lojaAberta e atualiza UI
     setInterval(bootFeesHours, 60000);
+
+    // Quando a aba volta para o foco, atualiza pedidos
+    document.addEventListener('visibilitychange', ()=>{
+      if(!document.hidden && user){
+        fetchOrders({showSkeleton:false});
+      }
+    });
   })();
 
   async function loadMenu(){
@@ -665,7 +676,6 @@
       setActiveTab('perfil'); showPage('perfil');
       return;
     }
-    // Bloqueio quando fechado
     if(!lojaAberta){
       const status = getOpenStatusLocal();
       alert(`Estamos fechados no momento. ${status.message}.`);
@@ -833,7 +843,6 @@
     $('#btnCartFinish').disabled = !lojaAberta;
     $('#closedHint').classList.toggle('hidden', lojaAberta);
     $('#closedHintCart').classList.toggle('hidden', lojaAberta);
-    // Desabilita "Adicionar" existentes (ao alternar aberto/fechado sem re-render)
     $$('#menuGrid .card .btn').forEach(b=>{
       b.disabled = !lojaAberta;
       b.textContent = lojaAberta ? 'Adicionar' : 'Fechado';
@@ -869,7 +878,7 @@
     if(!r.ok) return;
     cart=[]; store.set('cf_cart',cart); renderCart();
     alert('Pedido enviado! Código: '+r.id);
-    setActiveTab('perfil'); showPage('perfil'); fetchOrders();
+    setActiveTab('perfil'); showPage('perfil'); fetchOrders({showSkeleton:true});
   }
 
   function applyUser(){
@@ -891,7 +900,9 @@
       user=r.user; token=r.token; 
       store.set('cf_user',user); store.set('cf_token',token); 
       applyUser(); alert('Bem-vindo!'); 
-      fetchOrders(); startPolling();
+      await fetchOrders({showSkeleton:true});
+      startOrdersAutoRefresh(10000);   // <-- liga auto-refresh após login
+      startPolling();
     } else {
       alert('Falha no login: '+(r.error||'')); 
     }
@@ -913,20 +924,26 @@
     else { alert('Erro no cadastro: '+(r.error||'')) }
   }
 
-  function logout(){ user=null; token=null; store.del('cf_user'); store.del('cf_token'); location.reload() }
+  function logout(){
+    stopOrdersAutoRefresh();         // <-- garante parar o timer
+    user=null; token=null; store.del('cf_user'); store.del('cf_token'); location.reload()
+  }
 
   // ===== HISTÓRICO =====
-  async function fetchOrders(){
+  async function fetchOrders({showSkeleton=true} = {}){
     if(!user) return;
-    ordersSkeleton();
+    if(showSkeleton) ordersSkeleton();
     const r = await api('listOrders');
+    renderOrdersList(r.ok ? (r.items||[]) : []);
+  }
+
+  function renderOrdersList(items){
     const box = $('#ordersList'); box.innerHTML='';
 
     const payMap = { pix:'PIX', credito:'Crédito', debito:'Débito', dinheiro:'Dinheiro' };
 
-    if(r.ok && r.items?.length){
-      r.items.forEach(o=>{
-        // Compatível mesmo que a API ainda não retorne entrega/pagamento diretamente
+    if(items.length){
+      items.forEach(o=>{
         const entregaVal = o?.entrega ?? o?.order?.entrega; 
         const payVal     = o?.pay     ?? o?.order?.pay;
 
@@ -1076,7 +1093,7 @@
     }else{
       alert(`${title}\n\n${body}`);
     }
-    if(n.order_id) fetchOrders();
+    if(n.order_id) fetchOrders({showSkeleton:false});
   }
 
   // ===== Endereços =====
@@ -1190,7 +1207,7 @@
     renderCheckout();
   }
 
-  // NOVO: Atualiza UI de aberto/fechado
+  // Atualiza UI aberto/fechado
   function updateOpenUI(isOpen, message){
     lojaAberta = !!isOpen;
 
@@ -1200,14 +1217,12 @@
       badge.style.color = isOpen ? 'var(--ok)' : 'var(--bad)';
     }
 
-    // Cards / botões
     updateAuthUI();
-    // Re-render para refletir estado nas listagens
     renderMenu(activeCat);
   }
 
   async function bootFeesHours(){
-    // 1) TAXAS – separado do horário para não quebrar o badge se falhar
+    // 1) TAXAS
     try {
       const fees = await api('getFees');
       if (fees.ok){
@@ -1217,10 +1232,9 @@
       }
     } catch(e){
       console.warn('Falha ao carregar taxas:', e);
-      // não mexer no badge aqui
     }
 
-    // 2) HORÁRIO — sempre calcula localmente
+    // 2) HORÁRIO (local)
     try {
       const open = getOpenStatusLocal();
       updateOpenUI(open.open, open.message);
@@ -1302,6 +1316,23 @@
     showInstallButton(false);
     if (outcome !== 'accepted') setTimeout(()=> showInstallButton(true), 8000);
   });
+
+  /* ======= AUTO-REFRESH DE PEDIDOS (10s) ======= */
+  let ORDERS_AUTO_TIMER = null;
+
+  function startOrdersAutoRefresh(ms = 10000){
+    if(!user){ stopOrdersAutoRefresh(); return; }
+    stopOrdersAutoRefresh();
+    const tick = ()=> {
+      if(document.hidden) return;
+      fetchOrders({showSkeleton:false});
+    };
+    tick(); // primeira execução imediata
+    ORDERS_AUTO_TIMER = setInterval(tick, ms);
+  }
+  function stopOrdersAutoRefresh(){
+    if(ORDERS_AUTO_TIMER){ clearInterval(ORDERS_AUTO_TIMER); ORDERS_AUTO_TIMER = null; }
+  }
   </script>
 </body>
 </html>
